# ppt

./: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts
bench/: generate-scores.mjs  run-bench.ts  scoring.ts  trial-config.json
desktop/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
e2e/: app.spec.ts
lyrics/: README.md  갈급한 내 맘.md  감사함으로.md  구주 예수 의지함이.md  그런 사랑.md  기대.md  기쁨의 날 주시네.md  꽃들도.md  나는 주님께 속한 자.md  나는 주만 높이리.md  나를 부르신 주.md  나를 향한 주의 사랑.md  나의 가장 낮은 마음.md  나의 안에 거하라.md  내 갈급함.md  내 마음을 가득 채운.md  내 맘에 오신 주.md  내 모습 이대로.md  내 삶은 주의 것.md  내 안에 가장 귀한 것.md  다시 복음 앞에.md  당신은 하나님의 언약 안에.md  돌아서지 않으리.md  때로는 너의 앞에.md  또 하나의 열매를 바라시며.md  말씀 앞에서.md  모든 열방 주 볼 때까지.md  믿음 없이는.md  믿음으로 서리라.md  복의 근원 강림하사.md  부르신 곳에서.md  빛 되신 주.md  빛으로 비추시네.md  새 힘 얻으리.md  성령이여 내 영혼을.md  시선.md  시편 139편.md  십자가 그 사랑.md  십자가를 참으신.md  아바 아버지.md  (+41 more)
public/: front-slides.pptx  library.json  service-template.pptx
scripts/: assemble-pptx-assets.mjs
src/: App.tsx  styles.css  vite-env.d.ts
tests/: announcementBuilder.test.ts  biblePptxBuilder.test.ts  bibleRefParser.test.ts  bibleVersePlanner.test.ts  contiText.test.ts  pptxBuilder.test.ts  pptxMerge.test.ts  pptxPackage.test.ts  pptxSlices.test.ts  scoreAi.test.ts  scoreHuggingFace.test.ts  scoreParser.test.ts  scoreRecognition.test.ts  serviceDeck.test.ts  slidePlanner.test.ts  songCardLabels.test.ts
worker/: README.md  (+3 more)
(+129 files in other folders)
