[package]
name = "worship-setlist-desktop"
version = "0.1.0"
description = "Worship Setlist + Lyrics Slide Generator (local-first)"
edition = "2021"

[lib]
name = "worship_setlist_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
